<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgottenPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:paddingRight="10dp">


        <TextView
            android:id="@+id/passUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passUserText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/fpNameUserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/passUserEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passUserEmailText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/fpUserEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/passUserLuckyNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passUserLuckyNumberText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/fpUserLuckyNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/fpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fpButton"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/backLoginForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_revert"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>